--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body
     background-color: blue;
     opacity: 0.8;
     padding: 5px 20px;
-    margin: 5px;
+    margin: 2px;
     display: block;
     left: 20px;
     letter-spacing: 0.2em;
@@ -27,7 +27,7 @@ body
     height: 10px;
     width: 100%;
     border: 20px blue;
-    font-size: 16px;
+    font-size: 15px;
     padding: 1px;
     margin: 2px 2px 2px 2px;
     color: green;
@@ -126,4 +126,50 @@ h2
     color: black;
     text-decoration: yellow;
     cursor: pointer;
+}
+
+
+@media only screen and (max-width: 1120px) {
+    .menu
+    {
+        width: 100%;
+        height: 120px;
+        padding: 5px;
+        margin: 5px;
+        display: flex;
+    }
+    .menu-sub
+    {
+        height: 90px;
+        width: 100%;
+        font-size: 14px;
+        padding: 5px;
+        margin: 5px;
+    }
+
+}
+@media only screen and (max-width: 800px) and (min-width: 400px) {
+    #kramericapic
+    {
+        position: relative;
+        height: 200px;
+        width: 100%;
+        margin: 1px;
+        border: 1px solid black:
+    }
+    #kramericapic2
+    {
+        position: relative;
+        height: 200px;
+        width: 100%;
+        left: 45px;
+        margin: 1px;
+        border: 1px solid black:
+    }
+    .contactform
+    {
+        position: center;
+        left: 150px;
+    }
+
 }
